KUBERNETES/ingress/demo-17/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app.kubernetes.io/name: myapp
  namespace: myapp
spec:
  selector:
    app.kubernetes.io/name: myapp
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
